done desktop and tablet view

--- a/index.html
+++ b/index.html
@@ -1,39 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo-container">
+        <img src="./images/logo.svg" alt="snap logo" class="logo" />
+      </div>
+      <div class="mobile-nav">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li>
+              <a href="#" class="nav-link"
+                >Features
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="icon arrow down"
+                  class="nav-link-img nav-link-img--down"
+                />
+                <img
+                  src="./images/icon-arrow-up.svg"
+                  alt="icon arrow down"
+                  class="nav-link-img nav-link-img--up"
+                />
+              </a>
+              <ul class="nav-list-nested">
+                <li>
+                  <a href="" class="nav-link nav-link-nested">
+                    <img
+                      src="./images/icon-todo.svg"
+                      alt=""
+                      class="nav-link-nested--img"
+                    />
+                    Todo List</a
+                  >
+                </li>
+                <li>
+                  <a href="" class="nav-link nav-link-nested"
+                    ><img
+                      src="./images/icon-calendar.svg"
+                      alt=""
+                      class="nav-link-nested--img"
+                    />
+                    Calendar</a
+                  >
+                </li>
+                <li>
+                  <a href="" class="nav-link nav-link-nested"
+                    ><img
+                      src="./images/icon-reminders.svg"
+                      alt=""
+                      class="nav-link-nested--img"
+                    />
+                    Reminders</a
+                  >
+                </li>
+                <li>
+                  <a href="" class="nav-link nav-link-nested"
+                    ><img
+                      src="./images/icon-planning.svg"
+                      alt=""
+                      class="nav-link-nested--img"
+                    />
+                    Planning</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#" class="nav-link"
+                >Company
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="icon arrow down"
+                  class="nav-link-img nav-link-img--down" />
+                <img
+                  src="./images/icon-arrow-up.svg"
+                  alt="icon arrow down"
+                  class="nav-link-img nav-link-img--up"
+              /></a>
+              <ul class="nav-list-nested">
+                <li>
+                  <a href="" class="nav-link nav-link-nested">History</a>
+                </li>
+                <li>
+                  <a href="" class="nav-link nav-link-nested">Our Team</a>
+                </li>
+                <li>
+                  <a href="" class="nav-link nav-link-nested">Blog</a>
+                </li>
+              </ul>
+            </li>
+            <li><a href="#" class="nav-link">Careers</a></li>
+            <li><a href="#" class="nav-link">About</a></li>
+          </ul>
+        </nav>
+        <div class="login">
+          <a href="#" class="btn btn--login">Login</a>
+          <a href="#" class="btn btn--register">Register</a>
+        </div>
+      </div>
+    </header>
 
-  Features
-  Company
-  Careers
-  About
+    <main>
+      <section class="section-hero">
+        <div class="container grid grid--2-cols transform">
+          <div class="hero-text-box">
+            <h1 class="heading heading--primary">
+              Make <br />
+              remote work
+            </h1>
+            <p class="hero-text">
+              Get your team in sync, no matter your location. Streamline
+              processes, create team rituals, and watch productivity soar.
+            </p>
 
-  Login
-  Register
+            <a href="#" class="btn btn--more">Learn more</a>
 
-  Make remote work
+            <div class="featured-in">
+              <img
+                src="./images/client-databiz.svg"
+                alt=""
+                class="featured-in-img"
+              />
+              <img
+                src="./images/client-audiophile.svg"
+                alt=""
+                class="featured-in-img"
+              />
+              <img
+                src="./images/client-meet.svg"
+                alt=""
+                class="featured-in-img"
+              />
+              <img
+                src="./images/client-maker.svg"
+                alt=""
+                class="featured-in-img"
+              />
+            </div>
+          </div>
+          <div class="hero-img-box">
+            <img
+              src="./images/image-hero-desktop.png"
+              alt=""
+              class="hero-img-desktop"
+            />
+            <img
+              src="./images/image-hero-mobile.png"
+              alt=""
+              class="hero-img-mobile"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Rachid</a>.
+    </div>
+  </body>
 </html>
