adjusted mobile view, and added movile navigation, not complete though

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="./js/code.js"></script>
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
@@ -114,11 +115,25 @@
             <li><a href="#" class="nav-link">About</a></li>
           </ul>
         </nav>
+
         <div class="login">
           <a href="#" class="btn btn--login">Login</a>
           <a href="#" class="btn btn--register">Register</a>
         </div>
       </div>
+
+      <button class="btn-mobile-nav">
+        <img
+          src="./images/icon-menu.svg"
+          alt=""
+          class="icon-mobile-nav icon-mobile-nav--open"
+        />
+        <img
+          src="./images/icon-close-menu.svg"
+          alt=""
+          class="icon-mobile-nav icon-mobile-nav--close"
+        />
+      </button>
     </header>
 
     <main>
