--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="nav">
           <ul class="nav-list">
             <li>
-              <a href="#" class="nav-link"
+              <a href="#" class="nav-link nav-link-has-nested-nav"
                 >Features
                 <img
                   src="./images/icon-arrow-down.svg"
@@ -88,7 +88,7 @@
               </ul>
             </li>
             <li>
-              <a href="#" class="nav-link"
+              <a href="#" class="nav-link nav-link-has-nested-nav"
                 >Company
                 <img
                   src="./images/icon-arrow-down.svg"
