--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <header class="header">
+      <div class="nav-background"></div>
       <div class="logo-container">
         <img src="./images/logo.svg" alt="snap logo" class="logo" />
       </div>
